# lean-host-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  deny.toml  taplo.toml
.claude/: settings.json
.claude/agents/: architecture-reviewer.md
.claude/hooks/: contract-guard.sh  format.sh
.claude/skills/bump-toolchain/: SKILL.md
.claude/skills/deep-module-design/: SKILL.md
.claude/skills/optimizing-lean-performance/: SKILL.md
.claude/skills/optimizing-lean-performance/references/: term-size-and-transparency.md
.claude/skills/optimizing-rust-performance/: SKILL.md
.claude/skills/optimizing-rust-performance/references/: external-lessons.md  repo-surfaces.md  workflow.md
.claude/skills/release-lean-host-mcp/: SKILL.md
.claude/skills/technical-writing/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: multi_project_dispatch.rs  position_lookup_after_cache_warm.rs  process_module_owned.rs  worker_cold_spawn.rs  worker_roundtrip.rs
crates/lean-host-mcp/: Cargo.toml  README.md
crates/lean-host-mcp-worker/: Cargo.toml  build.rs
crates/lean-host-mcp/benches/: module_query_roundtrip.rs  multi_project_dispatch.rs  position_lookup_after_cache_warm.rs  process_module_owned.rs  worker_cold_spawn.rs  worker_roundtrip.rs
crates/lean-host-mcp/src/: admission.rs  broker.rs  cache.rs  config_file.rs  config_schema.rs  diagnosis.rs  envelope.rs  error.rs  ilean.rs  index.rs  lake_meta.rs  lib.rs  main.rs  project.rs  projections.rs  semantic_search.rs  server.rs  smoke.rs  toolchain.rs  transport_http.rs  trust.rs
crates/lean-host-mcp/src/cli/: config_init.rs  install_worker.rs  mod.rs  processes.rs
crates/lean-host-mcp/src/tools/: changed_coverage.rs  declaration.rs  declaration_inventory.rs  index.rs  lean.rs  mod.rs  placement.rs  position.rs  proof_action.rs  proof_search.rs  scan.rs  semantic.rs  source_input.rs
crates/lean-host-mcp/tests/: e2e.rs  http_transport.rs  kanproofs_eval.rs  multi_project.rs  project_lifecycle.rs  resolution.rs  smoke_perf.rs  stdio_lifecycle.rs  worker.rs
crates/lean-host-mcp/tests/fixtures/ilean/: bad_version.ilean  demo_a.ilean  demo_b.ilean
crates/lean-host-mcp/tests/support/: mod.rs
docs/: architecture.md  ilean-reference-index.md  operations.md  tool-catalog.md  version-matrix.md
fixtures/lean/: LeanRsFixture.lean  README.md
fixtures/lean/LeanRsFixture/: ProofActions.lean  ProofAgent.lean  ProofSearchFacts.lean
scripts/: prerelease.sh  rss_threshold_sweep.fixture.json  rss_threshold_sweep.py
src/: broker.rs  cache.rs  envelope.rs  error.rs  index.rs  lake_meta.rs  lib.rs  main.rs  project.rs  projections.rs  server.rs  session.rs
src/tools/: index.rs  lean.rs  mod.rs  position.rs  scan.rs
tests/: e2e.rs  project_lifecycle.rs  resolution.rs  worker.rs
