[package]
authors.workspace = true
categories = ["development-tools"]
description = "Worker-child binary for lean-host-mcp (links libleanshared; spawned by the parent)"
edition.workspace = true
keywords = ["lean", "lean4", "mcp"]
license.workspace = true
name = "lean-host-mcp-worker"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "lean-host-mcp-worker"
path = "src/main.rs"

[dependencies]
lean-rs-worker-child = "0.1.20"

[lints]
workspace = true
